--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammad Ali - Product Manager & Engineer</title>
+    <title>Mohammad Ali</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
     <style>
         :root {
-            --primary-color: #1F3F49;   /* Dark Teal */
+            --primary-color: #9D0606;   /* Dark Brownish Red */
             --secondary-color: #D32D41; /* Crimson */
-            --accent-color: #6AB187;    /* Light Green */
-            --background-color: #DADADA;/* Light Grey */
+            --accent-color: #043F84;    /* Dark Blue */
+            --background-color: #000000;/* Black */
             --text-color: #20283E;      /* Navy Blue */
             --highlight-color: #488A99; /* Medium Blue */
         }
