--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammad Ali - Product Manager & Engineer</title>
+    <title>Mohammad Ali</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
     <style>
         :root {
@@ -91,6 +91,12 @@
             font-size: 20px;
         }
 
+
+        #showcase h1:hover,
+        #showcase p:hover {
+            transform: scale(1.1);
+            transition: transform 0.3s ease-in-out;
+        }
         .button {
             display: inline-block;
             font-size: 18px;
@@ -208,7 +214,7 @@
 
     <section id="showcase">
         <div class="container content">
-            <h1>Product Manager & Mechanical Engineer</h1>
+            <h1>Product Developer</h1>
             <p>Innovating at the intersection of technology and business</p>
             <a href="#" class="button">Download Resume</a>
         </div>
