--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
     <style>
         :root {
-            --primary-color: #1F3F49;  /* Dark Blue */
-            --secondary-color: #6AB187;  /* Mint Green */
-            --accent-color: #D32D41;  /* Red */
-            --background-color: #20283E;  /* Darker Blue */
-            --text-color: #DADADA;  /* Light Gray */
+            --primary-color: #f0e6d2;  /* Cream color */
+            --secondary-color: #5d4037;  /* Brown color */
+            --accent-color: #8d6e63;  /* Lighter brown */
+            --background-color: #fafafa;
+            --text-color: #333333;
             --hover-text-color: #488A99;  /* Teal */
         }
 
@@ -34,10 +34,11 @@
         header {
             background: var(--primary-color);
             color: var(--text-color);
-            padding-top: 10px;
-            min-height: 50px;
-            border-bottom: var(--secondary-color) 3px solid;
+            padding-top: 5px;
+            min-height: 30px;
+            border-bottom: var(--secondary-color) 2px solid;
             transition: all 0.3s ease;
+            position: fixed;
         }
 
         header a {
@@ -214,8 +215,8 @@
 
     <section id="showcase">
         <div class="container content">
-            <h1>Product Developer</h1>
-            <p>Innovating at the intersection of technology and business</p>
+            <h1>Mohammad Ali</h1>
+            <p>Product Manager and Tech Enthusiast</p>
             <a href="#" class="button">Download Resume</a>
         </div>
     </section>
